index html change x 1
ok

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
 
   <audio id="myaudio" autoplay>
-    <source src="https://www.w3schools.com/tags/horse.mp3" type="audio/mpeg">
+    <source src="sounds/open.mp3" type="audio/mpeg">
   </audio>
   <script>
-    document.getElementById('myaudio').play();
+    document.getElementById("myaudio").play();
   </script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
